--- a/business/pom.xml
+++ b/business/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>data</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
     </dependencies>
 
 </project>
