--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,14 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.version>3.2</maven.compiler.version>
+        <maven.failsafe.version>2.18.1</maven.failsafe.version>
         <!--Core-->
         <spring.version>4.1.6.RELEASE</spring.version>
         <spring-data.version>1.8.0.RELEASE</spring-data.version>
         <!-- Logging -->
         <slf4j.version>1.7.12</slf4j.version>
+        <!-- Test -->
+        <mockito.version>1.10.19</mockito.version>
     </properties>
 
     <build>
@@ -48,6 +51,20 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${maven.failsafe.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -59,6 +76,13 @@
                 <version>1.1.2.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
