--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,10 @@
   "dependencies": {},
   "repository": {},
   "devDependencies": {
+    "bower": "latest",
     "grunt": "latest",
     "grunt-autoprefixer": "latest",
+    "grunt-cli": "latest",
     "grunt-concurrent": "latest",
     "grunt-contrib-clean": "latest",
     "grunt-contrib-concat": "latest",
