--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -14,37 +14,54 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>pl.allegro</groupId>
-                <artifactId>grunt-maven-plugin</artifactId>
-                <version>1.5.0</version>
-                <configuration>
-                    <jsSourceDirectory>.</jsSourceDirectory>
-                    <sourceDirectory>src/main/</sourceDirectory>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <version>0.0.23</version>
 
-                    <!-- example options usage to get verbose output in logs -->
-                    <gruntOptions>
-                        <gruntOption>--verbose</gruntOption>
-                    </gruntOptions>
-
-                    <!-- example npm install env variable -->
-                    <npmEnvironmentVar>
-                        <PHANTOMJS_CDNURL>http://cnpmjs.org/downloads</PHANTOMJS_CDNURL>
-                    </npmEnvironmentVar>
-
-                    <!-- example options usage to filter variables in given resource -->
-                    <filteredResources>
-                        <filteredResource>maven-properties.json</filteredResource>
-                    </filteredResources>
-                </configuration>
                 <executions>
+
                     <execution>
+                        <id>install node and npm</id>
                         <goals>
-                            <goal>create-resources</goal>
+                            <goal>install-node-and-npm</goal>
+                        </goals>
+                        <configuration>
+                            <nodeVersion>v0.12.2</nodeVersion>
+                            <npmVersion>2.7.6</npmVersion>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>npm install</id>
+                        <goals>
                             <goal>npm</goal>
+                        </goals>
+                        <!-- Optional configuration which provides for running any npm command -->
+                        <configuration>
+                            <arguments>install</arguments>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>bower install</id>
+                        <goals>
                             <goal>bower</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>install</arguments>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>grunt build</id>
+                        <goals>
                             <goal>grunt</goal>
                         </goals>
+                        <configuration>
+                            <arguments>--no-color</arguments>
+                        </configuration>
                     </execution>
+
                 </executions>
             </plugin>
         </plugins>
