--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>business</module>
         <module>rest</module>
         <module>frontend</module>
+        <module>integration-tests</module>
     </modules>
 
     <properties>
