--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
 
 *.iml
+target/
 
 ## Directory-based project format:
 .idea/
