--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -6,7 +6,9 @@
     "bootstrap": "latest",
     "angular-animate": "latest",
     "angular-resource": "latest",
-    "angular-route": "latest"
+    "angular-route": "latest",
+    "angular-ui": "latest",
+    "angular-google-maps": "latest"
   },
   "devDependencies": {
     "angular-mocks": "latest"
