--- a/data/src/main/resources/config.properties
+++ b/data/src/main/resources/config.properties
@@ -10,3 +10,4 @@ hibernate.format_sql=false
 hibernate.hbm2ddl.auto=create-drop
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=false
+hibernate.hbm2ddl.import_files=META-INF/sql/insert.sql
