--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,14 @@
     <modules>
         <module>data</module>
         <module>business</module>
-        <module>rest</module>
         <module>frontend</module>
+        <module>rest</module>
         <module>integration-tests</module>
     </modules>
 
     <properties>
         <!--Build-->
+        <project.build.finalName>pbroker</project.build.finalName>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -35,6 +36,8 @@
     </properties>
 
     <build>
+        <finalName>${project.build.finalName}</finalName>
+
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -68,18 +71,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>${maven-war-plugin}</version>
-                <configuration>
-                    <webResources>
-                        <resource>
-                            <directory>frontend/dist</directory>
-                        </resource>
-                    </webResources>
-                </configuration>
             </plugin>
 
             <plugin>
@@ -122,6 +113,15 @@
         <dependency>
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
         </dependency>
 
         <!-- Logging. -->
