--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <!--Build-->
         <project.build.finalName>pbroker</project.build.finalName>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.version>3.2</maven.compiler.version>
