--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -16,6 +16,7 @@
             <groupId>cz.fi.muni.pb138</groupId>
             <artifactId>business</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -27,6 +28,12 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
             <scope>test</scope>
         </dependency>
 
