--- a/rest/src/main/webapp/WEB-INF/web.xml
+++ b/rest/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     <display-name>pbroker</display-name>
 
     <welcome-file-list>
-        <welcome-file></welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
     <filter>
