--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -8,11 +8,15 @@
     "angular-resource": "latest",
     "angular-route": "latest",
     "angular-ui": "latest",
-    "angular-google-maps": "latest"
+    "angular-google-maps": "latest",
+    "angular-bootstrap": "latest"
   },
   "devDependencies": {
     "angular-mocks": "latest"
   },
   "appPath": "app",
-  "moduleName": "propertyBrokerApp"
+  "moduleName": "propertyBrokerApp",
+  "resolutions": {
+    "angular": "1.3.15"
+  }
 }
