--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -11,7 +11,8 @@
     "angular-bootstrap": "latest",
     "angular-ui-router": "latest",
     "angular-growl-v2": "latest",
-    "ng-lodash": "~0.2.3"
+    "ng-lodash": "~0.2.3",
+    "angular-spinner": "~0.6.1"
   },
   "devDependencies": {
     "angular-mocks": "latest"
@@ -19,6 +20,6 @@
   "appPath": "app",
   "moduleName": "propertyBrokerApp",
   "resolutions": {
-    "angular": "1.3.15"
+    "angular": "1.4.0"
   }
 }
